<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".allactivity.DifficultySelectionScreenActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/statusBar"
        android:elevation="4dp"
        android:subtitleTextColor="#fff"
        android:theme="@style/ToolbarStyle"
        android:title="About me"
        android:titleTextColor="#fff"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:subtitleTextColor="#fff"
        app:titleTextColor="#fff" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:elegantTextHeight="false"
            android:text="@string/difficulty"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp"
            android:textColor="#12faff"
            android:textStyle="normal"
            android:typeface="normal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp" />

        <Button
            android:id="@+id/btnEasy"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/btnEasy" />

        <Button
            android:id="@+id/btnNormal"
            android:layout_width="190dp"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"

            android:text="@string/btnNormal" />

        <Button
            android:id="@+id/btnHard"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/btnHard" />


    </LinearLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_home_footer_1">

    </com.google.android.gms.ads.AdView>


</RelativeLayout>