<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".allactivity.GameScreenActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/statusBar"
        android:elevation="4dp"
        android:subtitleTextColor="#fff"
        android:theme="@style/ToolbarStyle"
        android:title="About me"
        android:titleTextColor="#fff"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:subtitleTextColor="#fff"
        app:titleTextColor="#fff" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:gravity="center|center_horizontal"
        android:orientation="vertical"
        android:weightSum="1">


        <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/player_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:text="@string/txtPlayer"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/txtPlayerScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:numeric="integer"
                    android:text="0"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Button
                    android:background="@color/colorPrimaryDark"
                    android:id="@+id/levelChangeid"
                    android:padding="5dp"
                    android:textSize="25sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="Level Change" />

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/cpu_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtCPU"
                    android:textAlignment="gravity"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/txtCPUScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text=" 0"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/difficulty_TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="Difficulty Level"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>


        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnTL"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_column="0"
                    android:layout_margin="5dp"
                    android:layout_weight="0"
                    android:background="#05803a"
                    android:textColor="#f20505"
                    android:textSize="50sp" />

                <Button
                    android:id="@+id/btnTM"
                    android:layout_width="100dp"
                    android:layout_height="fill_parent"
                    android:layout_column="1"
                    android:layout_margin="5dp"
                    android:background="#05803a"
                    android:textColor="#f20505"
                    android:textSize="50sp" />

                <Button
                    android:id="@+id/btnTR"
                    android:layout_width="100dp"
                    android:layout_height="fill_parent"
                    android:layout_column="2"
                    android:layout_margin="5dp"
                    android:background="#05803a"
                    android:textColor="#f20505"
                    android:textSize="50sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnML"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_column="0"
                    android:layout_margin="5dp"
                    android:background="#05803a"
                    android:textColor="#f20505"
                    android:textSize="50sp" />

                <Button
                    android:id="@+id/btnMM"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_margin="5dp"
                    android:background="#05803a"
                    android:textColor="#f20505"
                    android:textSize="50sp" />

                <Button
                    android:id="@+id/btnMR"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_column="2"
                    android:layout_margin="5dp"
                    android:background="#05803a"
                    android:textColor="#f20505"
                    android:textSize="50sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnBL"

                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_column="0"
                    android:layout_margin="5dp"
                    android:background="#05803a"
                    android:textColor="#f20505"
                    android:textSize="50sp" />

                <Button
                    android:id="@+id/btnBM"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_column="1"
                    android:layout_margin="5dp"
                    android:background="#05803a"
                    android:textColor="#f20505"
                    android:textSize="50sp" />

                <Button
                    android:id="@+id/btnBR"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="2"
                    android:layout_margin="5dp"
                    android:background="#05803a"
                    android:textColor="#f20505"
                    android:textSize="50sp" />
            </TableRow>
        </TableLayout>

        <com.google.android.gms.ads.AdView
            android:layout_marginTop="10dp"
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_home_footer_1">
        </com.google.android.gms.ads.AdView>

    </LinearLayout>


</RelativeLayout>